--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <html>
 
-
    <head>
      <title>Strona</title>
       <link rel="stylesheet" href="style.css">
@@ -11,11 +10,9 @@
 
   <body>
     <audio controls autoplay muted>
-     <source src="barkaWykop.mp3" type="audio/mpeg">
-     Your browser does not support the audio element.
+     <source src="https://nubet.github.io/PapiezowyBot/barkaWykop.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
    </audio>
   </body>
-
-
 
 </html>
