--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <audio controls autoplay muted>
-     <source src="https://nubet.github.io/PapiezowyBot/barkaWykop.mp3" type="audio/mpeg">
+     <source src="barkaWykop.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
    </audio>
   </body>
