--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 
   <body>
-    <audio controls autoplay muted>
-     <source src="BarkaWykop.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-   </audio>
+    <audio
+        controls
+        src="BarkaWykop.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio>
   </body>
 
 </html>
