--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 
 
   <body>
-    <audio
-        controls
-        src="BarkaWykop.mp3">
-            Your browser does not support the
-            <code>audio</code> element.
-    </audio>
+   <audio controls autoplay>
+  <source src="BarkaWykop.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
   </body>
 
 </html>
